Joda-Time version 1.1
---------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This is the second full release of Joda-Time.

We recommend JDK 1.3 or later, and have performed no testing on earlier JDKs.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license cause you problems please contact the mailing list.


Incompatible changes since 1.0
------------------------------
None - source and binary compatible.


Deprecations since 1.0
----------------------
None


Bug fixes since 1.0
-------------------
None


Enhancements since 1.0
----------------------
- YearMonthDay/TimeOfDay
  Enabled comparisons using Comparable interface
  Added compareTo/isEqual/isAfter/isBefore methods

- Period
  Added constructors to create a Period from two ReadablePartials, such as
  YearMonthDay or TimeOfDay

- PeriodType
  Added three new period types - YearMonthDay, YearWeekDay and YearDay
  These complement the existing ones but exclude the time fields.

- DateTimeFormatter
  Method withPivotYear added to allow the two digit pivot year to be controlled.
  This is most useful after creating a format from a string pattern.

- DateTimeZone classes updated to latest data from the Olsen time zone database


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team